force-app/main/default/objects/DRL_ProspectLeadStatusMapping__mdt/DRL_ProspectLeadStatusMapping__mdt.object-meta.xml
<CustomObject>
    <label>Prospect Lead Status Mapping</label>
    <pluralLabel>Prospect Lead Status Mappings</pluralLabel>
</CustomObject>