force-app/main/default/objects/DRL_ProspectLeadStatusMapping__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes if the metatdata is active or not.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>