force-app/main/default/objects/DRL_ProspectLeadStatusMapping__mdt/fields/LeadStatus__c.field-meta.xml
<CustomField>
    <fullName>LeadStatus__c</fullName>
    <label>Lead Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>