force-app/main/default/objects/DRL_ProspectLeadStatusMapping__mdt/fields/ProspectStatus__c.field-meta.xml
<CustomField>
    <fullName>ProspectStatus__c</fullName>
    <description>Status value of the Prospect</description>
    <inlineHelpText>Enter the status value of the Prospect.</inlineHelpText>
    <label>Prospect Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>