force-app/main/default/objects/DRL_ProspectLeadStatusMapping__mdt/fields/Weightage__c.field-meta.xml
<CustomField>
    <fullName>Weightage__c</fullName>
    <description>Stores the weightage of the status value</description>
    <inlineHelpText>Enter weightage for the status value of the Lead.</inlineHelpText>
    <label>Weightage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>